fix/scrollbar

--- a/src/input.css
+++ b/src/input.css
@@ -7,6 +7,9 @@ body{
     scrollbar-color:rgb(13, 62, 58);
     scrollbar-width: thin;
 }
+html{
+    scroll-behavior: smooth;
+}
 ::-webkit-scrollbar {
     width: 12px;
 }
